<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
        Acciones del drawer. checkableBehavior="none" evita que queden marcadas como
        estados; todas las entradas de este grupo son acciones que navegan o abren diálogos.
    -->
    <group
        android:id="@+id/grupoAccionesDrawer"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menuCuentaSeguridad"
            android:icon="@drawable/perfil"
            android:title="@string/cuenta_y_seguridad" />

        <item
            android:id="@+id/menuCambiarContrasena"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/cambiar_contrasena" />

        <item
            android:id="@+id/menuAyuda"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/ayuda" />

        <item
            android:id="@+id/menuContactarSoporte"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/contactar_soporte" />

        <item
            android:id="@+id/menuComprarPuntos"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/comprar_puntos" />

        <item
            android:id="@+id/menuSuscripcion"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/suscripcion" />

        <item
            android:id="@+id/menuPoliticaPrivacidad"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/politica_privacidad" />

        <!--
            Selector de tema. Al pulsarlo se abre un AlertDialog con las tres opciones
            (Claro / Oscuro / Sistema); por eso es una acción más del grupo.
        -->
        <item
            android:id="@+id/menuTema"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/tema" />
    </group>

</menu>
