<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xl"
    android:background="@color/fondo">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.TFG.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_hint"
        app:boxBackgroundColor="@color/superficie_variant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTituloEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="text"
            android:imeOptions="flagNoExtractUi"
            android:textColor="@color/texto_principal"
            android:textColorHint="@color/gris" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPuntosEditar"
        style="@style/Widget.TFG.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/puntos_hint"
        android:layout_marginTop="@dimen/spacing_md"
        app:boxBackgroundColor="@color/superficie_variant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPuntosEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="none"
            android:imeOptions="flagNoExtractUi"
            android:textColor="@color/texto_principal"
            android:textColorHint="@color/gris" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPuntosFijosEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/puntos_fijos_200"
        android:textColor="@color/texto_secundario"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dificultad"
        android:textSize="12sp"
        android:textColor="@color/gris"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_xs" />

    <Spinner
        android:id="@+id/spDificultadEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_campo"
        android:padding="@dimen/spacing_xs" />

</LinearLayout>
